--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "minify",
   "version": "0.0.1",
   "description": "A tiny stand-alone Spotify player",
-  "main": "build/index.js",
+  "main": "./dist/main.js",
   "dependencies": {
     "copyfiles": "^2.3.0",
-    "electron": "^9.2.1",
     "typescript": "^4.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
+    "electron": "^9.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
   "scripts": {
+    "dev:electron": "crossenv NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "compile": "tsc && copyfiles -f src/index.html build",
     "start": "npm run compile && electron ."
   },
